include/gpac/filters.h


typedef struct __gf_filter_session GF_FilterSession;
typedef struct __gf_filter GF_Filter;
typedef struct __gf_filter_pid GF_FilterPid;
typedef union __gf_filter_event GF_FilterEvent;
typedef struct __gf_prop_val GF_PropertyValue;
typedef enum
{
	GF_FS_SCHEDULER_LOCK_FREE=0,
	GF_FS_SCHEDULER_LOCK,
	GF_FS_SCHEDULER_LOCK_FREE_X,
	GF_FS_SCHEDULER_LOCK_FORCE,
	GF_FS_SCHEDULER_DIRECT
} GF_FilterSchedulerType;
GF_FilterSession *gf_fs_new(s32 nb_threads, GF_FilterSchedulerType type, u32 flags, const char *blacklist);
void gf_fs_del(GF_FilterSession *session);
GF_Filter *gf_fs_load_filter(GF_FilterSession *session, const char *name, GF_Err *err_code);
GF_Err gf_fs_run(GF_FilterSession *session);
GF_Filter *gf_fs_load_source(GF_FilterSession *session, const char *url, const char *args, const char *parent_url, GF_Err *err);
GF_Filter *gf_fs_load_destination(GF_FilterSession *session, const char *url, const char *args, const char *parent_url, GF_Err *err);
GF_Err gf_fs_post_user_task(GF_FilterSession *session, Bool (*task_execute) (GF_FilterSession *fsess, void *callback, u32 *reschedule_ms), void *udta_callback, const char *log_name);
GF_Err gf_fs_abort(GF_FilterSession *session, Bool do_flush);
Bool gf_fs_is_last_task(GF_FilterSession *session);
Bool gf_fs_mime_supported(GF_FilterSession *session, const char *mime);
void gf_fs_print_stats(GF_FilterSession *session);
void gf_fs_print_connections(GF_FilterSession *session);
void gf_fs_enable_reporting(GF_FilterSession *session, Bool reporting_on);
void gf_fs_lock_filters(GF_FilterSession *session, Bool do_lock);
u32 gf_fs_get_filters_count(GF_FilterSession *session);
GF_Filter *gf_fs_get_filter(GF_FilterSession *session, u32 idx);
typedef enum
{
	GF_FS_STATS_FILTER_UNKNOWN,
	GF_FS_STATS_FILTER_RAWIN,
	GF_FS_STATS_FILTER_DEMUX,
	GF_FS_STATS_FILTER_DECODE,
	GF_FS_STATS_FILTER_ENCODE,
	GF_FS_STATS_FILTER_MUX,
	GF_FS_STATS_FILTER_RAWOUT,
	GF_FS_STATS_FILTER_MEDIA_SINK,
	GF_FS_STATS_FILTER_MEDIA_SOURCE,
} GF_FSFilterType;
typedef struct
{
	const GF_Filter *filter;
	const GF_Filter *filter_alias;
	u64 nb_tasks_done;
	u64 nb_pck_processed;
	u64 nb_bytes_processed;
	u64 nb_pck_sent;
	u64 nb_hw_pck_sent;
	u32 nb_errors;
	u64 nb_bytes_sent;
	u64 time_process;
	s32 percent;
	const char *status;
	Bool report_updated;
	const char *name;
	const char *reg_name;
	const char *filter_id;
	Bool done;
	u32 nb_pid_in;
	u64 nb_in_pck;
	u32 nb_pid_out;
	u64 nb_out_pck;
	Bool in_eos;
	GF_FSFilterType type;
	u32 stream_type;
	u32 codecid;
	GF_Fraction64 last_ts_sent;
	GF_Fraction64 last_ts_drop;
} GF_FilterStats;
typedef enum
{
	GF_FILTER_UPDATE_DOWNSTREAM = 1<<1,
	GF_FILTER_UPDATE_UPSTREAM = 1<<2,
} GF_EventPropagateType;
void gf_fs_send_update(GF_FilterSession *session, const char *fid, GF_Filter *filter, const char *name, const char *val, GF_EventPropagateType propagate_mask);
u32 gf_fs_get_http_max_rate(GF_FilterSession *session);
u32 gf_fs_get_http_rate(GF_FilterSession *session);
typedef enum
{
	GF_PROP_FORBIDEN=0,
	GF_PROP_SINT,
	GF_PROP_UINT,
	GF_PROP_LSINT,
	GF_PROP_LUINT,
	GF_PROP_BOOL,
	GF_PROP_FRACTION,
	GF_PROP_FRACTION64,
	GF_PROP_FLOAT,
	GF_PROP_DOUBLE,
	GF_PROP_VEC2I,
	GF_PROP_VEC2,
	GF_PROP_VEC3I,
	GF_PROP_VEC3,
	GF_PROP_VEC4I,
	GF_PROP_VEC4,
	GF_PROP_PIXFMT,
	GF_PROP_PCMFMT,
	GF_PROP_STRING,
	GF_PROP_STRING_NO_COPY,
	GF_PROP_DATA,
	GF_PROP_NAME,
	GF_PROP_DATA_NO_COPY,
	GF_PROP_CONST_DATA,
	GF_PROP_POINTER,
	GF_PROP_STRING_LIST,
	GF_PROP_UINT_LIST,
	GF_PROP_SINT_LIST,
	GF_PROP_VEC2I_LIST,
	GF_PROP_LAST_DEFINED,
} GF_PropType;
struct __gf_prop_val
{
	GF_PropType type;
	union {
		u64 longuint;
		s64 longsint;
		s32 sint;
		u32 uint;
		Bool boolean;
		GF_Fraction frac;
		GF_Fraction64 lfrac;
		Fixed fnumber;
		Double number;
		GF_PropVec2i vec2i;
		GF_PropVec2 vec2;
		GF_PropVec3i vec3i;
		GF_PropVec3 vec3;
		GF_PropVec4i vec4i;
		GF_PropVec4 vec4;
		GF_PropData data;
		char *string;
		void *ptr;
		GF_List *string_list;
		GF_PropUIntList uint_list;
		GF_PropIntList sint_list;
		GF_PropVec2iList v2i_list;
	} value;
};
const char *gf_props_get_type_name(GF_PropType type);
u32 gf_props_get_id(const char *name);
union __gf_filter_event
{
	GF_FEVT_Base base;
	GF_FEVT_Play play;
	GF_FEVT_SourceSeek seek;
	GF_FEVT_AttachScene attach_scene;
	GF_FEVT_Event user_event;
	GF_FEVT_QualitySwitch quality_switch;
	GF_FEVT_VisibililityHint visibility_hint;
	GF_FEVT_BufferRequirement buffer_req;
	GF_FEVT_SegmentSize seg_size;
	GF_FEVT_FileDelete file_del;
};
enum
{
	GF_CAPFLAG_IN_BUNDLE = 1,
	GF_CAPFLAG_INPUT = 1<<1,
	GF_CAPFLAG_OUTPUT = 1<<2,
	GF_CAPFLAG_EXCLUDED = 1<<3,
	GF_CAPFLAG_LOADED_FILTER = 1<<4,
	GF_CAPFLAG_STATIC = 1<<5,
	GF_CAPFLAG_OPTIONAL = 1<<6,
};
#define GF_CAPS_INPUT	(GF_CAPFLAG_IN_BUNDLE|GF_CAPFLAG_INPUT)
#define GF_CAPS_INPUT_OPT	(GF_CAPFLAG_IN_BUNDLE|GF_CAPFLAG_INPUT|GF_CAPFLAG_OPTIONAL)
#define GF_CAPS_INPUT_STATIC	(GF_CAPFLAG_IN_BUNDLE|GF_CAPFLAG_INPUT|GF_CAPFLAG_STATIC)
#define GF_CAPS_INPUT_STATIC_OPT	(GF_CAPFLAG_IN_BUNDLE|GF_CAPFLAG_INPUT|GF_CAPFLAG_STATIC|GF_CAPFLAG_OPTIONAL)
#define GF_CAPS_INPUT_EXCLUDED	(GF_CAPFLAG_IN_BUNDLE|GF_CAPFLAG_INPUT|GF_CAPFLAG_EXCLUDED)
#define GF_CAPS_INPUT_LOADED_FILTER	(GF_CAPFLAG_IN_BUNDLE|GF_CAPFLAG_INPUT|GF_CAPFLAG_LOADED_FILTER)
#define GF_CAPS_OUTPUT	(GF_CAPFLAG_IN_BUNDLE|GF_CAPFLAG_OUTPUT)
#define GF_CAPS_OUTPUT_LOADED_FILTER	(GF_CAPFLAG_IN_BUNDLE|GF_CAPFLAG_OUTPUT|GF_CAPFLAG_LOADED_FILTER)
#define GF_CAPS_OUTPUT_EXCLUDED	(GF_CAPFLAG_IN_BUNDLE|GF_CAPFLAG_OUTPUT|GF_CAPFLAG_EXCLUDED)
#define GF_CAPS_OUTPUT_STATIC	(GF_CAPFLAG_IN_BUNDLE|GF_CAPFLAG_OUTPUT|GF_CAPFLAG_STATIC)
#define GF_CAPS_OUTPUT_STATIC_EXCLUDED	(GF_CAPFLAG_IN_BUNDLE|GF_CAPFLAG_OUTPUT|GF_CAPFLAG_EXCLUDED|GF_CAPFLAG_STATIC)
#define GF_CAPS_INPUT_OUTPUT	(GF_CAPFLAG_IN_BUNDLE|GF_CAPFLAG_INPUT|GF_CAPFLAG_OUTPUT)
#define GF_CAPS_INPUT_OUTPUT_OPT	(GF_CAPFLAG_IN_BUNDLE|GF_CAPFLAG_INPUT|GF_CAPFLAG_OUTPUT|GF_CAPFLAG_OPTIONAL)
const char *gf_filter_get_name(GF_Filter *filter);
void gf_filter_remove(GF_Filter *filter);
u32 gf_filter_get_ipid_count(GF_Filter *filter);
GF_FilterPid *gf_filter_get_ipid(GF_Filter *filter, u32 idx);
u32 gf_filter_get_opid_count(GF_Filter *filter);
GF_FilterPid *gf_filter_get_opid(GF_Filter *filter, u32 idx);
GF_Err gf_filter_set_source(GF_Filter *filter, GF_Filter *link_from, const char *link_ext);
const char *gf_filter_get_id(GF_Filter *filter);
GF_Err gf_filter_reconnect_output(GF_Filter *filter);
GF_Err gf_filter_get_stats(GF_Filter *filter, GF_FilterStats *stats);
const GF_PropertyValue *gf_filter_pid_get_property(GF_FilterPid *PID, u32 prop_4cc);
const GF_PropertyValue *gf_filter_pid_get_property_str(GF_FilterPid *PID, const char *prop_name);
GF_Filter *gf_fs_new_filter(GF_FilterSession *session, const char *name, GF_Err *e);