gpac/include/gpac/version.h


const char *gf_gpac_version();
const char *gf_gpac_copyright();
const char *gf_gpac_copyright_cite();