share/python/libgpac.py


#helpers
GF_CAPS_INPUT = (GF_CAPFLAG_IN_BUNDLE|GF_CAPFLAG_INPUT)
GF_CAPS_INPUT_OPT = (GF_CAPFLAG_IN_BUNDLE|GF_CAPFLAG_INPUT|GF_CAPFLAG_OPTIONAL)
GF_CAPS_INPUT_STATIC = (GF_CAPFLAG_IN_BUNDLE|GF_CAPFLAG_INPUT|GF_CAPFLAG_STATIC)
GF_CAPS_INPUT_STATIC_OPT = (GF_CAPFLAG_IN_BUNDLE|GF_CAPFLAG_INPUT|GF_CAPFLAG_STATIC|GF_CAPFLAG_OPTIONAL)
GF_CAPS_INPUT_EXCLUDED = (GF_CAPFLAG_IN_BUNDLE|GF_CAPFLAG_INPUT|GF_CAPFLAG_EXCLUDED)
GF_CAPS_INPUT_LOADED_FILTER = (GF_CAPFLAG_IN_BUNDLE|GF_CAPFLAG_INPUT|GF_CAPFLAG_LOADED_FILTER)
GF_CAPS_OUTPUT = (GF_CAPFLAG_IN_BUNDLE|GF_CAPFLAG_OUTPUT)
GF_CAPS_OUTPUT_LOADED_FILTER = (GF_CAPFLAG_IN_BUNDLE|GF_CAPFLAG_OUTPUT|GF_CAPFLAG_LOADED_FILTER)
GF_CAPS_OUTPUT_EXCLUDED = (GF_CAPFLAG_IN_BUNDLE|GF_CAPFLAG_OUTPUT|GF_CAPFLAG_EXCLUDED)
GF_CAPS_OUTPUT_STATIC = (GF_CAPFLAG_IN_BUNDLE|GF_CAPFLAG_OUTPUT|GF_CAPFLAG_STATIC)
GF_CAPS_OUTPUT_STATIC_EXCLUDED = (GF_CAPFLAG_IN_BUNDLE|GF_CAPFLAG_OUTPUT|GF_CAPFLAG_EXCLUDED|GF_CAPFLAG_STATIC)
GF_CAPS_INPUT_OUTPUT = (GF_CAPFLAG_IN_BUNDLE|GF_CAPFLAG_INPUT|GF_CAPFLAG_OUTPUT)
GF_CAPS_INPUT_OUTPUT_OPT = (GF_CAPFLAG_IN_BUNDLE|GF_CAPFLAG_INPUT|GF_CAPFLAG_OUTPUT|GF_CAPFLAG_OPTIONAL)


#load libgpac
_libgpac = cdll.LoadLibrary("libgpac.dylib")

#error to string helper
_libgpac.gf_error_to_string.argtypes = [c_int]
_libgpac.gf_error_to_string.restype = c_char_p
 
_libgpac.gf_gpac_version.restype = c_char_p
_libgpac.gf_gpac_copyright.restype = c_char_p
_libgpac.gf_gpac_copyright_cite.restype = c_char_p

_libgpac.gf_sys_set_args.argtypes = [c_int, POINTER(POINTER(c_char))]

version = str(_libgpac.gf_gpac_version(), "utf-8")
copyright = str(_libgpac.gf_gpac_copyright(), "utf-8")
copyright_cite = str(_libgpac.gf_gpac_copyright_cite(), "utf-8")


_libgpac.gf_sys_init.argtypes = [c_int, c_char_p]
_libgpac.gf_log_set_tools_levels.argtypes = [c_char_p, c_int]
_libgpac.gf_props_get_type_name.argtypes = [c_uint]
_libgpac.gf_props_get_type_name.restype = c_char_p

_libgpac.gf_sys_clock.res = c_uint
_libgpac.gf_sys_clock_high_res.res = c_ulonglong


last_err=0;
last_errp = c_int(0)

def e2s(err):
    return _libgpac.gf_error_to_string(err).decode()


mem_track_on=0
def init(mem_track=0, profile=None):
    if (mem_track!=0) or (profile != None):
        last_err = _libgpac.gf_sys_init(mem_track, profile)
    else:
        last_err = _libgpac.gf_sys_init(0, None)

    mem_track_on=mem_track
    if (hasattr(_libgpac, 'gf_memory_size')==False):
        mem_track_on=0
    else:
        mem_track_on=mem_track
    
    if (last_err<0): 
        raise Exception('Failed to initialize libgpac: ' + e2s(last_err))


def close():
    _libgpac.gf_sys_close()
    if mem_track_on:
        if _libgpac.gf_memory_size() or _libgpac.gf_file_handles_count():
            set_logs("mem@info")
            _libgpac.gf_memory_print()

def set_logs(logs):
    _libgpac.gf_log_set_tools_levels(logs.encode('utf-8'), 0)

def sys_clock():
    return _libgpac.gf_sys_clock()

def sys_clock_high_res():
    return _libgpac.gf_sys_clock_high_res()

def set_args(args):
    p = (POINTER(c_char)*len(args))()
    for i, arg in enumerate(args):
        enc_arg = arg.encode('utf-8')
        p[i] = create_string_buffer(enc_arg)
    _libgpac.gf_sys_set_args(len(args), cast(p, POINTER(POINTER(c_char))) )



GF_FilterSession = c_void_p
GF_Filter = c_void_p
GF_FilterPid = c_void_p

#
#        filter session bindings
#

_libgpac.gf_fs_new.argtypes = [c_int, c_int, c_int, c_char_p]
_libgpac.gf_fs_new.restype = GF_FilterSession

_libgpac.gf_fs_del.argtypes = [GF_FilterSession]
_libgpac.gf_fs_del.restype =  None

_libgpac.gf_fs_run.argtypes = [GF_FilterSession]
_libgpac.gf_fs_run.restype = c_int

_libgpac.gf_fs_load_source.argtypes = [GF_FilterSession, c_char_p, c_char_p, c_char_p, POINTER(c_int)]
_libgpac.gf_fs_load_source.restype = GF_Filter

_libgpac.gf_fs_load_destination.argtypes = [GF_FilterSession, c_char_p, c_char_p, c_char_p, POINTER(c_int)]
_libgpac.gf_fs_load_destination.restype = GF_Filter

_libgpac.gf_fs_load_filter.argtypes = [GF_FilterSession, c_char_p, POINTER(c_int)]
_libgpac.gf_fs_load_filter.restype = GF_Filter

_libgpac.gf_fs_new_filter.argtypes = [GF_FilterSession, c_char_p, POINTER(c_int)]
_libgpac.gf_fs_new_filter.restype = GF_Filter


_libgpac.gf_fs_post_user_task.argtypes = [GF_FilterSession, c_void_p, py_object, c_char_p]
_libgpac.gf_fs_post_user_task.restype = c_int

_libgpac.gf_fs_is_last_task.argtypes = [GF_FilterSession]
_libgpac.gf_fs_is_last_task.restype = c_bool

_libgpac.gf_fs_get_filters_count.argtypes = [GF_FilterSession]
_libgpac.gf_fs_get_filter.argtypes = [GF_FilterSession, c_int]
_libgpac.gf_fs_get_filter.restype = GF_Filter

_libgpac.gf_fs_abort.argtypes = [GF_FilterSession, c_bool]

_libgpac.gf_fs_get_http_max_rate.argtypes = [GF_FilterSession]
_libgpac.gf_fs_get_http_rate.argtypes = [GF_FilterSession]
_libgpac.gf_fs_lock_filters.argtypes = [GF_FilterSession, c_bool]
_libgpac.gf_fs_enable_reporting.argtypes = [GF_FilterSession, c_bool]

_libgpac.gf_fs_print_stats.argtypes = [GF_FilterSession]
_libgpac.gf_fs_print_connections.argtypes = [GF_FilterSession]

_libgpac.gf_fs_fire_event.argtypes = [GF_FilterSession, GF_Filter, POINTER(GF_FilterEvent), c_bool]
_libgpac.gf_fs_fire_event.restype = c_bool

_libgpac.gf_fs_mime_supported.argtypes = [GF_FilterSession, c_char_p]
_libgpac.gf_fs_mime_supported.restype = c_bool

_libgpac.gf_fs_mime_supported.argtypes = [GF_FilterSession, c_char_p]
_libgpac.gf_fs_mime_supported.restype = c_bool

_libgpac.gf_fs_is_supported_source.argtypes = [GF_FilterSession, c_char_p]
_libgpac.gf_fs_is_supported_source.restype = c_bool


@CFUNCTYPE(c_bool, GF_FilterSession, c_void_p, POINTER(c_uint))
def fs_task_fun(sess, cbk, resched):
 obj = cast(cbk, py_object).value
 res = obj.execute()
 if ((res==None) or (res<0)):
    obj.session.rem_task(obj)
    return False
 resched.contents.value=res
 return True

class FilterTask:
    def __init__(self, name):
        self.name = name
    def execute(self):
        return -1


class FilterSession:
    def __init__(self, flags=0, blacklist=None, nb_threads=0, sched_type=0):
        if (blacklist!=None):
            self._sess = _libgpac.gf_fs_new(nb_threads, sched_type, flags, blacklist.encode('utf-8'))
        else:
            self._sess = _libgpac.gf_fs_new(nb_threads, sched_type, flags, blacklist)
        if (self._sess==None):
            raise Exception('Failed to create new filter session')
        self._filters = []
        self._tasks = []


    def delete(self):
        if self._sess:
            _libgpac.gf_fs_del(self._sess)
            self._sess=None


    def _to_filter(self, f, IsCustom=False):
        for i, a_f in enumerate(self._filters):
            if (a_f._filter == f):
                return a_f

        if (IsCustom):
            filter = FilterCustom(self, f)
        else:
            filter = Filter(self, f)
        self._filters.append(filter)
        return filter

    def run(self):
        last_err = _libgpac.gf_fs_run(self._sess)
        if (last_err<0): 
            raise Exception('Failed to run session: ' + e2s(last_err))

    def load_src(self, URL, parentURL=None):
        if (parentURL!=None):
            filter = _libgpac.gf_fs_load_source(self._sess, URL.encode('utf-8'), None, parentURL.encode('utf-8'), byref(last_errp))
        else:
            filter = _libgpac.gf_fs_load_source(self._sess, URL.encode('utf-8'), None, None, byref(last_errp))
        last_err = last_errp.value
        if (last_err<0): 
            raise Exception('Failed to load source filter ' + URL + ': ' + e2s(last_err))
        return self._to_filter(filter)

    def load_dst(self, URL, parentURL=None):
        if (parentURL!=None):
            filter = _libgpac.gf_fs_load_destination(self._sess, URL.encode('utf-8'), None, parentURL.encode('utf-8'), byref(last_errp))
        else:
            filter = _libgpac.gf_fs_load_destination(self._sess, URL.encode('utf-8'), None, None, byref(last_errp))
        last_err = last_errp.value
        if (last_err<0): 
            raise Exception('Failed to load destination filter ' + URL + ': ' + e2s(last_err))
        return self._to_filter(filter)


    def load(self, fname):
        filter = _libgpac.gf_fs_load_filter(self._sess, fname.encode('utf-8'), byref(last_errp))
        last_err = last_errp.value
        if (last_err<0): 
            raise Exception('Failed to load filter ' + URL + ': ' + e2s(last_err))
        return self._to_filter(filter)

    def post(self, task):
        task.fs = self
        task.session = self
        last_err = _libgpac.gf_fs_post_user_task(self._sess, fs_task_fun, py_object(task), task.name.encode('utf-8'))
        if (last_err<0): 
            raise Exception('Failed to load filter ' + URL + ': ' + e2s(last_err))
        self._tasks.append(task)

    def rem_task(self, task):
        task.fs = None
        task.session = None
        self._tasks.remove(task)

    def abort(self, flush=False):
        _libgpac.gf_fs_abort(self._sess, flush)
        
    def get_filter(self, index):
        f = _libgpac.gf_fs_get_filter(self._sess, index)
        if (f==None):
            raise Exception('Failed to get filter at index ' + str(index) )
        return self._to_filter(f)

    def lock(self, lock):
        _libgpac.gf_fs_lock_filters(self._sess, lock)

    def reporting(self, do_report):
        _libgpac.gf_fs_enable_reporting(self._sess, do_report)

    def print_stats(self):
        _libgpac.gf_fs_print_stats(self._sess)

    def print_graph(self):
        _libgpac.gf_fs_print_connections(self._sess)

    def fire_event(self, evt, filter=None, upstream=False):
        if filter:
            return _libgpac.gf_fs_fire_event(self._sess, filter._filter, byref(evt), upstream)
        return _libgpac.gf_fs_fire_event(self._sess, None, byref(evt), upstream)

    def is_supported_mime(self, mime):
        return _libgpac.gf_fs_mime_supported(self._sess, mime.encode('utf-8'))

    def is_supported_mime(self, url):
        return _libgpac.gf_fs_is_supported_source(self._sess, url.encode('utf-8'))


    @property
    def last_task(self):
        if _libgpac.gf_fs_is_last_task(self._sess):
            return True
        return False

    @property
    def nb_filters(self):
        return _libgpac.gf_fs_get_filters_count(self._sess)

    @property
    def http_bitrate(self):
        return _libgpac.gf_fs_get_http_rate(self._sess)
    
    @property
    def http_max_bitrate(self):
        return _libgpac.gf_fs_get_http_max_rate(self._sess)

    #TODO
    #global session: session caps ?

    #missing features available in JSFilterSession API but with no native direct equivalents:
    # rmt_send, rmt_set_fun, set_new_filter_fun, set_del_filter_fun, set_event_fun



#
#        filter bindings
#
_libgpac.gf_filter_get_name.argtypes = [GF_Filter]
_libgpac.gf_filter_get_name.restype = c_char_p
_libgpac.gf_filter_get_id.argtypes = [GF_Filter]
_libgpac.gf_filter_get_id.restype = c_char_p
_libgpac.gf_filter_get_ipid_count.argtypes = [GF_Filter]
_libgpac.gf_filter_get_opid_count.argtypes = [GF_Filter]



_libgpac.gf_filter_get_stats.argtypes = [GF_Filter, POINTER(GF_FilterStats)]
_libgpac.gf_filter_remove.argtypes = [GF_Filter]
_libgpac.gf_fs_send_update.argtypes = [GF_FilterSession, c_char_p, GF_Filter, c_char_p, c_char_p, c_uint]
_libgpac.gf_filter_set_source.argtypes = [GF_Filter, GF_Filter, c_char_p]
_libgpac.gf_filter_reconnect_output.argtypes = [GF_Filter]

_libgpac.gf_props_get_id.argtypes = [c_char_p]
_libgpac.gf_filter_get_ipid.argtypes = [GF_Filter, c_uint]
_libgpac.gf_filter_get_ipid.restype = GF_FilterPid
_libgpac.gf_filter_get_opid.argtypes = [GF_Filter, c_uint]
_libgpac.gf_filter_get_opid.restype = GF_FilterPid
_libgpac.gf_filter_pid_get_property.argtypes = [GF_FilterPid, c_uint]
_libgpac.gf_filter_pid_get_property.restype = POINTER(GF_PropertyValue)
_libgpac.gf_filter_pid_get_property_str.argtypes = [GF_FilterPid, c_char_p]
_libgpac.gf_filter_pid_get_property_str.restype = POINTER(GF_PropertyValue)
